# sp-01.04

./: 01.04 пз1.docx  ~$.04 пз1.docx
MathLib/: CMakeLists.txt  library.h
lr1/: CMakeLists.txt  main.cpp
lr2/: CMakeLists.txt  main.cpp
lr3/: CMakeLists.txt  main.cpp
pz-01/: CMakeLists.txt  Hello.c  app.c  main.c
pz-02/: pz-02.sln
pz-02/pz-02/: Program.cs  pz-02.csproj
pz-03/: CMakeLists.txt  main.cpp
pz-04/: pz-04.sln
pz-04/pz-04/: Database.cs  Program.cs  pz-04.csproj
pz-05/: pz-05.sln
pz-05/pz-05/: Program.cs  pz-05.csproj
pz-06/: CMakeLists.txt  main.cpp
pz-07/: pz-07.sln
pz-07/pz-07/: Program.cs  pz-07.csproj
pz-08/: CMakeLists.txt  main.cpp
pz-09/: CMakeLists.txt  main.cpp
pz-10/: CMakeLists.txt  main.cpp
pz-11/: CMakeLists.txt  main.cpp
pz-11/mathlib/: MathLib.cpp  MathLib.h
pz-12/: CMakeLists.txt  main.cpp
pz-12/factoriallib/: FactorialLib.cpp  FactorialLib.h
pz-13/: CMakeLists.txt  main.cpp
pz-16/: CMakeLists.txt  main.cpp
pz17/: pz17.slnx
pz17/pz17/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  Student.cs
pz18/: pz18.slnx
pz18/pz18/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  pz18.csproj
pz19/: pz19.slnx
pz19/pz19/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
pz20/: pz20.sln
pz20/pz20/: Car.cs  Program.cs
pz21/: pz21.slnx
pz21/pz21/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
pz22/: pz22.slnx
pz23/: pz23.slnx
pz25/: pz25.slnx
pz26/: pz26.slnx
(+36 files in other folders)
